<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:id="@+id/title_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/update_title_popup"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="@string/name"
                android:textColorHint="@color/temperature_gray"
                android:outlineSpotShadowColor="@color/temperature_gray"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:counterEnabled="true"
                app:counterMaxLength="31"
                app:endIconMode="clear_text"
                app:endIconTint="@color/temperature_gray"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/title_popup"
                app:layout_constraintBottom_toTopOf="@id/description_popup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/popup_user_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:textSize="14sp"
                    android:maxLength="31"
                    android:textColor="@color/black"
                    android:layout_gravity="bottom"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/description_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:visibility="gone"
                android:text="@string/delete_description_popup"
                android:textSize="14sp"
                android:textStyle="bold"
                android:alpha="0.7"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/question_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:visibility="gone"
                android:text="@string/delete_check_question"
                android:textSize="14sp"
                android:textStyle="bold"
                android:alpha="0.7"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/description_popup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_marginEnd="4dp"
                android:elevation="0dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:alpha="0.8"
                android:textStyle="bold"
                android:textSize="12sp"
                app:cornerRadius="28dp"
                android:onClick="onClickCancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_confirm_popup"
                app:layout_constraintTop_toBottomOf="@id/question_popup"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_confirm_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/button_delete"
                android:textStyle="bold"
                android:textSize="12sp"
                app:cornerRadius="28dp"
                android:onClick="onClickConfirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_popup"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>