<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/remote_command_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/commands_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:paddingBottom="24dp"
        android:text="@string/commands_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/change_password_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="16dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/commands_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <ImageView
                android:id="@+id/button_icon_change_password"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_baseline_lock_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/button_icon_change_password">

                <TextView
                    android:id="@+id/change_password_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/change_password_descripton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/remote_change_password_description"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:alpha="0.4"/>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/registration_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="16dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/change_password_card_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <ImageView
                android:id="@+id/button_icon_registration"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_baseline_person_add_alt_1_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/button_icon_registration">

                <TextView
                    android:id="@+id/registration_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/registration"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/registration_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/remote_registration_description"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:alpha="0.4"/>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/deregistration_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="16dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/registration_card_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <ImageView
                android:id="@+id/button_icon_deregistration"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_baseline_person_remove_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/button_icon_deregistration">

                <TextView
                    android:id="@+id/deregistration_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/deregistration"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/deregistration_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/remote_deregistration_description"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:alpha="0.4"/>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/preview_switch_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        card_view:contentPadding="16dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardElevation="0dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="6dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/deregistration_card_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <ImageView
                android:id="@+id/button_icon_preview_switch"
                android:layout_width="@dimen/icon_size"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:src="@drawable/ic_baseline_switch_camera_24"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/button_icon_preview_switch">

                <TextView
                    android:id="@+id/preview_switch_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/camera_switch"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/preview_switch_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/remote_camera_switch_description"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:alpha="0.4"/>

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
