<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/changing_password_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:animateLayoutChanges="true"
    tools:context=".activity.ChangePasswordActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".activity.RegistrationActivity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/changing_password_layout">

        <include layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fab_size"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:elevation="12dp"
            android:onClick="onBackFABPressed"
            app:layout_anchor="@id/toolbar"
            app:layout_anchorGravity="start|bottom"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white"
            app:backgroundTint="@color/button_blue" />

        <include layout="@layout/custom_cardview_fab"
            android:id="@+id/scan_fab_cardview"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/changing_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_old"
            android:textColorHint="@color/temperature_gray"
            android:outlineSpotShadowColor="@color/temperature_gray"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/temperature_gray"
            app:boxStrokeColor="@color/text_input_layout_stroke_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword|numberPassword"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:maxEms="6"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextFieldNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_new"
            android:textColorHint="@color/temperature_gray"
            android:outlineSpotShadowColor="@color/temperature_gray"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/temperature_gray"
            app:boxStrokeColor="@color/text_input_layout_stroke_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword|numberPassword"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:maxEms="6"
                android:maxLength="6" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotten_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:text="@string/change_password_description"
            android:elegantTextHeight="true"
            android:textSize="12sp"
            android:textAlignment="center"
            android:alpha="0.4"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>